--- a/background.html
+++ b/background.html
@@ -7,7 +7,7 @@
 	<h1>Cool Generator</h1>
 	<input oninput ="changeGradient()" class="color1" type="color" name="color1" value="#00ff00">
 	<input oninput="changeGradient()" class="color2" type="color" name="color2" value="#ff0000">
-	<h2>Current CSS Background</h2>
+	<h2>This is the background</h2>
 	<h3></h3>
 	<script type="text/javascript" src="background.js"></script>
 
